Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
4.5.0
-
4.5.0-1879
-
Untriaged
-
Unknown
Description
Set the lower 24 bits of the flags for a json document and update the document using a subdoc operation. Flags is reset to 0. Expectation is to retain the lower 24 bits.
Please provide steps to reproduce, or at least a wireshark / tcpdump of the session showing the issue.
Logs would also be very helpful.