MB-18883: Subdoc: Preserve flags across subdoc operations

Sub-document API operations were not preserving the flags of an item
when a subdoc mutation was applied - they were reset to zero upon a
mutation.

Fix by reading the input flags when the rest of the input document is
read, and use those flags when creating the new value.

Change-Id: I0de73d0f3f1e897caf53a55982ad11cc5e29ad86
Reviewed-on: http://review.couchbase.org/62101
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Will Gardner <will.gardner@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>